src/objects/LAC_Cooperative_Performance__c.object
<CustomObject>
    <description>Object that contains details about the performance of cooperatives</description>
    <fields>
        <fullName>LAC_Cooperative__c</fullName>
        <label>LAC Cooperative</label>
        <referenceTo>LAC_Cooperative__c</referenceTo>
        <relationshipLabel>LAC Cooperatives Performance</relationshipLabel>
        <relationshipName>LAC_Cooperatives_Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>certification__c</fullName>
        <label>certification</label>
        <picklist>
            <picklistValues>
                <fullName>Fairtrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>logoURL__c</fullName>
        <label>logoURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logo__c</fullName>
        <formula>IF(ISBLANK(logoURL__c) || ISNULL(logoURL__c), &quot;&quot;, IMAGE(logoURL__c,&quot;Logo Picture&quot;, 26, 26))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numberOfFarmers__c</fullName>
        <label>numberOfFarmers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non certified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LAC Cooperative Performance</label>
    <nameField>
        <displayFormat>COOPP-{00000}</displayFormat>
        <label>LAC Cooperative Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAC Cooperatives Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>